src/objects/brCommunity_Menu_Map__mdt.object
<CustomObject>
    <fields>
        <fullName>Data_Category_Group__c</fullName>
        <label>Data Category Group</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Menu_Target__c</fullName>
        <label>Menu Target</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Object_Name__c</fullName>
        <label>Object Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <label>Community Menu Map</label>
    <pluralLabel>Community Menu Map</pluralLabel>
</CustomObject>